# s2s-vietnamese

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.claude/: settings.json
configs/asr/: whisper_vietnamese.yaml
configs/eval/: default.yaml
configs/llm/: pretrain.yaml  sft.yaml
configs/pipeline/: cascade.yaml
configs/tts/: cosyvoice2_vietnamese.yaml
deploy/monitoring/: prometheus.yml
docs/: architecture.md  asr.md  decisions.md  deployment.md  e2e.md  h100-optimization.md  llm.md  streaming.md  training_log.md  tts.md  vad.md
s2s.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: benchmark_inference.py  profile_gpu.py
src/: __init__.py
src/asr/: __init__.py  config.py  model.py  streaming.py  train.py
src/deploy/: __init__.py  api.py
src/deploy/monitoring/: prometheus.py
src/e2e/: __init__.py  model.py  tokenizer.py
src/eval/: __init__.py  asr_metrics.py  e2e_metrics.py  tts_metrics.py
src/llm/: config.py  data.py  serve.py  train.py
src/pipeline/: __init__.py  cascade.py  realtime.py  vad.py
src/tts/: __init__.py  config.py  model.py  streaming.py  train.py
src/utils/: audio.py  logging.py  profiling.py
tests/: conftest.py  test_asr.py  test_data_pipeline.py  test_llm.py  test_pipeline.py  test_tts.py  test_vad.py
