[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2s"
version = "0.1.0"
description = "Production-grade Vietnamese Speech-to-Speech system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "structlog>=24.1",
    "prometheus-client>=0.19",
    "slowapi>=0.1",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "httpx>=0.26",
    "types-pyyaml",
]
gpu = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "transformers>=4.36",
    "accelerate>=0.25",
    "datasets>=2.16",
    "peft>=0.7",
    "vllm>=0.3",
]
train = [
    "deepspeed>=0.13",
    "flash-attn>=2.5",
    "wandb>=0.16",
    "jiwer>=3.0",
]

[project.scripts]
s2s-serve = "src.deploy.api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
